<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_gravity="center"
    android:layoutDirection="ltr"
    android:background="@drawable/back_edit_text">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/add_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTask"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_edit_text"
        android:gravity="start|top"
        android:hint="@string/hint"
        android:padding="8dp"
        android:textColor="@color/text_black"
        android:textColorHint="#B6B0B0"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/edtTask"
        app:layout_constraintTop_toBottomOf="@+id/edtTask" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintTop_toTopOf="@+id/btnSave" />

</androidx.constraintlayout.widget.ConstraintLayout>